# lstm-google-stock-price

./: README.md  lstm1predictor.ipynb  lstm_multi_predictor.ipynb  lstm_single_predictor.ipynb  pyproject.toml
data/: AAPL.csv  MSFT.csv
