[tool.poetry]
name = "lstm google stock price prediction"
version = "0.1.0"
description = ""
authors = ["Yannis Moros <yanmoros@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
scikit-learn = "1.0.1"
seaborn = "^0.11.2"
jupyterlab = "^3.4.3"
protobuf = "3.20"
tensorflow = "2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
